<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#9FFFFFFF"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/coba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_rukun_islam_yang_kelima"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coba"
            android:layout_marginTop="3dp"
            android:background="#9FFFFFFF"
            android:text="@string/qs_ali_imran_97" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginTop="3dp"
            android:background="#9FFFFFFF"
            android:text="@string/hr_bukhari8_muslim16" />

        <TextView
            android:id="@+id/coba1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginTop="3dp"
            android:text="@string/_2_mendapatkan_surga"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coba1"
            android:layout_marginTop="3dp"
            android:background="#9FFFFFFF"
            android:text="@string/hr_bukhari1773_muslim1349"/>

        <TextView
            android:id="@+id/coba2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginTop="3dp"
            android:text="@string/_3_menghilangkan_dosa"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coba2"
            android:layout_marginTop="3dp"
            android:background="#9FFFFFFF"
            android:text="@string/hr_tirmidzi_annasai_1200"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>