<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_menghilangkan_dosa"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tirmidzi_annasai_1200"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:background="@drawable/custom4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="11dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/desc3"
                android:textSize="11dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
